# reelo

./: .env.prod.example  .gitignore  DEPLOY.md  README.md  design-prompt.md  docker-compose.prod.yml
reelo-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.dev.yml  keystore.py  pyproject.toml  requirements.txt  services.yaml  usage.py  verify_web_images.py
reelo-backend/clients/: __init__.py  anthropic.py  base.py  claude_cli.py  commons_image.py  edge_tts.py  gemini.py  hf.py  kie_image.py  omnivoice.py  openai_compat.py  openverse_image.py  pexels_video.py  registry.py  sd.py  skill_image.py  skill_voice.py  stub.py  subprocess_util.py
reelo-backend/db/: __init__.py  keystore_backend.py  models.py  repository.py  session.py
reelo-backend/models/: __init__.py  jobs.py  spec.py
reelo-backend/module1/: __init__.py  episode_script.py  parse.py  persistence.py  prompt.py  skills.py  style.py  wizard.py
reelo-backend/module2/: __init__.py  curation.py  ffmpeg.py  jobs.py  materialize.py  render.py  resume.py  runner.py  subtitles.py  thumbnail.py  timing.py  voice.py
reelo-backend/skills/: README.md
reelo-backend/storage/: __init__.py  base.py  local.py  s3.py
reelo-backend/styles/: presets.yaml
reelo-backend/tests/: conftest.py  test_claude_cli.py  test_contracts.py  test_custom_voices.py  test_episode_reset.py  test_image_candidates.py  test_job_reconcile.py  test_kie_image.py  test_media_curation_merge.py  test_module1_endpoints.py  test_module1_episode_script.py  test_module1_parse.py  test_module1_prompt.py  test_module1_style_skills.py  test_module1_wizard.py  test_module1_worker.py  test_module2_endpoints.py  test_module2_materialize.py  test_module2_render.py  test_module2_resume.py  test_module2_runner.py  test_module2_thumbnail_jobs.py  test_module2_timing_subtitles.py  test_omnivoice.py  (+16 more)
(+87 files in other folders)
