[project]
name = "reelo-backend"
version = "0.1.0"
description = "Reelo backend — multi-tenant SaaS that turns an idea into a YouTube video via AI (FastAPI + Arq + Postgres + Redis + object storage, BYOK)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Reelo Team" }]

dependencies = [
    # web / app
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",     # multipart form (style/infer, music upload)
    # auth / session
    "authlib>=1.3",                # Google OAuth
    "itsdangerous>=2.2",           # signed session cookie
    # db
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # queue
    "arq>=0.26",
    "redis>=5.0",
    # http / crypto
    "httpx>=0.27",
    "cryptography>=42.0",          # AES-256-GCM key envelope
    "python-dotenv>=1.0",
    # object storage
    "aioboto3>=13.0",
    # AI providers (Module 3 will wire these up; deps declared here so clients import cleanly)
    "openai>=1.30",
    "anthropic>=0.30",
    "google-genai>=0.3",
    "edge-tts>=6.1",
    # config files
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "models",
    "clients",
    "db",
    "web",
    "worker",
    "storage",
    "module1",
]
# Single-module top-level files
include = [
    "config.py",
    "keystore.py",
    "usage.py",
    "services.yaml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
